# setlistrs

./: .gitignore  Cargo.toml  README.md  mprocs.yaml
setlistrs-app/: Cargo.toml  LICENSE-MIT  README.md  app.css  index.html  main.css
setlistrs-app/src/: app.rs  components.rs  main.rs
setlistrs-app/src/components/: add_song_form.rs  all_songs_list.rs  mod.rs  setlist_add.rs  setlist_details.rs  setlist_list.rs  song_add.rs  song_list.rs
setlistrs-server/: .env  Cargo.toml  Dockerfile
setlistrs-server/migrations/: 20230201222444_Initial_DB_structure.sql  20230211122148_add_setlist_and_setlist2song_relation.sql  20230226121047_Add_deleted_at_flag_to_songs.sql
setlistrs-server/src/: main.rs  repository.rs
setlistrs-server/src/setlist/: mod.rs  repository.rs  routes.rs
setlistrs-server/src/song/: mod.rs  repository.rs  routes.rs
setlistrs-types/: Cargo.toml
setlistrs-types/src/: lib.rs
