[package]
name = "setlistrs-server"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
setlistrs-types = { path="../setlistrs-types/" }
actix-web = "4.2.1"
actix-cors = "0.6.4"
tokio = { version = "1.25.0", features = ["macros"] }
sqlx = { version = "0.6.2", features = ["runtime-tokio-rustls", "sqlite", "migrate"] }
anyhow = "1.0.68"
dotenvy = "0.15.6"
chrono = "0.4.23"
